# tutorial-rust-surrealdb

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/api/: api_response.rs  mod.rs  party_panda_api.rs
src/aws/: aws_client.rs  aws_models.rs  mod.rs
src/dashabord/: dashaboard_models.rs  mod.rs
src/db/: dashboard_trait.rs  database.rs  error.rs  mod.rs  user_info_trait.rs
src/twilio/: mod.rs  services.rs  twilio_models.rs
src/user_profile/: mod.rs  user_models.rs
src/util/: mod.rs  panda_const.rs
