[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
async-trait = "0.1.80"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version = "1.0.200", features = ["derive"] }
surrealdb = "1.4.2"
uuid = "1.8.0"
validator = { version =  "0.18.1", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.5.0"
serde_json = "1.0.96"
actix-multipart = "0.6.1"
tokio = { features = ["io-util", "fs"] }
tokio-util = "0.7.11"
aws-config = "1.3.0"
aws-sdk-s3 = "1.25.0"
futures-util = "0.3.30"
